NBNP-95 Use new sort fields in View, implement custom 'edit' links

--- a/config-yml/views.view.digital_issue_list.yml
+++ b/config-yml/views.view.digital_issue_list.yml
@@ -84,7 +84,9 @@ display:
             issue_title: issue_title
             issue_date: issue_date
             issue_vol: issue_vol
+            issue_vol_sort: issue_vol_sort
             issue_issue: issue_issue
+            issue_issue_sort: issue_issue_sort
             issue_title_1: issue_title_1
           info:
             parent_title:
@@ -116,6 +118,13 @@ display:
               empty_column: false
               responsive: ''
             issue_vol:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            issue_vol_sort:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -123,6 +132,13 @@ display:
               empty_column: false
               responsive: ''
             issue_issue:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            issue_issue_sort:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -716,8 +732,8 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Volume
-          exclude: false
+          label: ''
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -749,7 +765,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -774,18 +790,18 @@ display:
           entity_type: digital_serial_issue
           entity_field: issue_vol
           plugin_id: field
-        issue_issue:
-          id: issue_issue
+        issue_vol_sort:
+          id: issue_vol_sort
           table: digital_serial_issue
-          field: issue_issue
+          field: issue_vol_sort
           relationship: none
           group_type: group
           admin_label: ''
-          label: Issue
+          label: Volume
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: '{{ issue_vol }}'
             make_link: false
             path: ''
             absolute: false
@@ -837,20 +853,85 @@ display:
           separator: ', '
           field_api_classes: false
           entity_type: digital_serial_issue
-          entity_field: issue_issue
+          entity_field: issue_vol_sort
           plugin_id: field
-        edit_digital_serial_issue:
-          id: edit_digital_serial_issue
+        issue_issue:
+          id: issue_issue
           table: digital_serial_issue
-          field: edit_digital_serial_issue
+          field: issue_issue
           relationship: none
           group_type: group
           admin_label: ''
-          label: Operation
-          exclude: false
+          label: ''
+          exclude: true
           alter:
             alter_text: false
             text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: digital_serial_issue
+          entity_field: issue_issue
+          plugin_id: field
+        issue_issue_sort:
+          id: issue_issue_sort
+          table: digital_serial_issue
+          field: issue_issue_sort
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Issue
+          exclude: false
+          alter:
+            alter_text: true
+            text: '{{ issue_issue }}'
             make_link: false
             path: ''
             absolute: false
@@ -887,11 +968,72 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          text: edit
-          output_url_as_text: false
-          absolute: false
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
           entity_type: digital_serial_issue
-          plugin_id: entity_link_edit
+          entity_field: issue_issue_sort
+          plugin_id: field
+        nothing:
+          id: nothing
+          table: views
+          field: nothing
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Operations
+          exclude: false
+          alter:
+            alter_text: true
+            text: edit
+            make_link: true
+            path: '/serials/{{ parent_title }}/issues/{{ id }}/edit'
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: false
+          plugin_id: custom
       defaults:
         fields: false
         arguments: false
@@ -1284,8 +1426,8 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Volume
-          exclude: false
+          label: ''
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -1317,7 +1459,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -1342,18 +1484,18 @@ display:
           entity_type: digital_serial_issue
           entity_field: issue_vol
           plugin_id: field
-        issue_issue:
-          id: issue_issue
+        issue_vol_sort:
+          id: issue_vol_sort
           table: digital_serial_issue
-          field: issue_issue
+          field: issue_vol_sort
           relationship: none
           group_type: group
           admin_label: ''
-          label: Issue
+          label: Volume
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: '{{ issue_vol }}'
             make_link: false
             path: ''
             absolute: false
@@ -1405,7 +1547,137 @@ display:
           separator: ', '
           field_api_classes: false
           entity_type: digital_serial_issue
+          entity_field: issue_vol_sort
+          plugin_id: field
+        issue_issue:
+          id: issue_issue
+          table: digital_serial_issue
+          field: issue_issue
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: digital_serial_issue
           entity_field: issue_issue
+          plugin_id: field
+        issue_issue_sort:
+          id: issue_issue_sort
+          table: digital_serial_issue
+          field: issue_issue_sort
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Issue
+          exclude: false
+          alter:
+            alter_text: true
+            text: '{{ issue_issue }}'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: digital_serial_issue
+          entity_field: issue_issue_sort
           plugin_id: field
         issue_title_1:
           id: issue_title_1
