--- a/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.routing.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.routing.yml
@@ -55,4 +55,4 @@ digital_serial_issue.title_edit_issue:
      _entity_form: digital_serial_issue.edit
      _title: 'Edit Metadata'
   requirements:
-    _permission: 'view published serial issue entities'
+    _permission: 'administer serial issue entities'
