NBNP-126 Increase digital serial access granularity

--- a/custom/modules/digital_serial/modules/digital_serial_page/digital_serial_page.routing.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_page/digital_serial_page.routing.yml
@@ -36,4 +36,4 @@ digital_serial_page.title_edit_page:
      _entity_form: digital_serial_page.edit
      _title: 'Edit Page Data'
   requirements:
-    _permission: 'view published serial page entities'
+    _permission: 'edit serial page entities'
