--- a/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.routing.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.routing.yml
@@ -11,7 +11,7 @@ entity.digital_serial_issue.add_page:
      _entity_form: digital_serial_page.add
      _title: 'Add serial issue page'
    requirements:
-     _permission: 'administer serial issue entities'
+     _permission: 'add serial page entities'
 
 entity.digital_serial_issue.canonical:
   path: '/digital_serial/digital_serial_issue/{digital_serial_issue}'
@@ -33,7 +33,7 @@ digital_serial_issue.title_add_issue:
      _entity_form: digital_serial_issue.add
      _title: 'Add Issue'
   requirements:
-    _permission: 'view published serial issue entities'
+    _permission: 'add serial issue entities'
 
 digital_serial_issue.title_view_issue:
   path: '/serials/{digital_serial_title}/issues/{digital_serial_issue}'
@@ -55,4 +55,4 @@ digital_serial_issue.title_edit_issue:
      _entity_form: digital_serial_issue.edit
      _title: 'Edit Metadata'
   requirements:
-    _permission: 'administer serial issue entities'
+    _permission: 'edit serial page entities'
