--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1811,7 +1811,7 @@ display:
           element_wrapper_type: '0'
           element_wrapper_class: ''
           element_default_classes: false
-          empty: ''
+          empty: "<span class=\"no-result\"><i class=\"glyphicon glyphicon-exclamation-sign\"></i>\r\nSearch excerpt not available.</span>"
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
