--- a/config-yml/user.role.newspaper_administrator.yml
+++ b/config-yml/user.role.newspaper_administrator.yml
@@ -14,3 +14,4 @@ permissions:
   - 'create publication content'
   - 'delete any publication content'
   - 'edit any publication content'
+  - 'edit serial page entities'
