--- a/package-conf/nginx/app.conf
+++ b/package-conf/nginx/app.conf
@@ -2,10 +2,11 @@ http {
   include mime.types;
   default_type application/octet-stream;
   sendfile on;
-  keepalive_timeout 30;
-  client_body_buffer_size 32k;
+  keepalive_timeout 240;
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
+  client_max_body_size 512M;
+  client_body_buffer_size 1M;
 
   server {
     listen  80;
