--- a/package-conf/php/app-php.ini
+++ b/package-conf/php/app-php.ini
@@ -2,7 +2,8 @@
 sendmail_path = "/usr/sbin/sendmail -t -i -f libsupport@unb.ca"
 upload_max_filesize = 256M
 post_max_size = 256M
-memory_limit = 512M
+memory_limit = 1024M
+max_execution_time = 300
 
 [Date]
 date.timezone = UTC
