NBNP-97 Text updates

--- a/config-yml/views.view.digital_issue_list.yml
+++ b/config-yml/views.view.digital_issue_list.yml
@@ -54,6 +54,11 @@ display:
           offset: 0
           id: 0
           total_pages: null
+          tags:
+            previous: '‹ Previous'
+            next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -62,11 +67,6 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          tags:
-            previous: '‹ Previous'
-            next: 'Next ›'
-            first: '« First'
-            last: 'Last »'
           quantity: 9
       style:
         type: table
@@ -1378,7 +1378,7 @@ display:
           empty: true
           tokenize: false
           content:
-            value: "<div class=\"alert alert-warning fade in\">\r\n    <span class=\"glyphicon glyphicon-exclamation-sign\"></span>\r\n    No issues have been found that match your filter selection.\r\n</div>"
+            value: "<div class=\"alert alert-warning fade in\">\r\n    <span class=\"glyphicon glyphicon-exclamation-sign\"></span>\r\n    No issues have been found.\r\n</div>"
             format: full_html
           plugin_id: text
       enabled: true
@@ -2049,7 +2049,7 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: "<h2 class=\"alert alert-success fade in\">\r\n    <span class=\"glyphicon glyphicon glyphicon-ok-circle\"></span>\r\n    Displaying @start - @end of @total issues\r\n</h2>"
+          content: "<h2 class=\"alert alert-success fade in\">\r\n    <span class=\"glyphicon glyphicon glyphicon-ok-circle\"></span>\r\n    Displaying @start - @end\r\n</h2>"
           plugin_id: result
       relationships:
         parent_title:
