--- a/config-yml/facets.facet.publication_years.yml
+++ b/config-yml/facets.facet.publication_years.yml
@@ -8,7 +8,7 @@ dependencies:
   module:
     - search_api
 id: publication_years
-name: 'Publication Date'
+name: 'Publication Year'
 url_alias: publication_years
 weight: 0
 min_count: 1
